                CHANGES in `mboost' VERSION 2.2-3 (2013-09-09, r733)

  o  fixed bugs in survival families:
     -  offset in all survival families was based on max(survtime) instead
     	of max(log(survtime));
     -  offset in CoxPH can't be computed from Cox Partial LH as constants
     	are canceled out; Use fixed offset instead;

  o  speed up checking of manual by changing some computations (e.g. reduce
     mstop) or exclude code from checking via \dontrun{}

  o  removed dependency on ipred (replaced with TH.data)

  o  small improvements in manual


                CHANGES in `mboost' VERSION 2.2-2 (2013-02-08, r703)

  o  bbs(..., center = "spectralDecomp") computes the spectral decomposition
     of the penalty matrix and the penalized part of the design matrix is
     defined by this decomposition. Experiments show that
         bols(x) + bbs(x, center = "spectralDecomp")
     is a little better in recovering the true underlying functions than
     the default
         bols(x) + bbs(x, center = TRUE)		or, equivalently,
         bols(x) + bbs(x, center = "differenceMatrix")
     For bbs(x, y, center = TRUE) or bmrf(x, center = TRUE), the spectral
     decomposition is (and was) always used.

  o  fixed bug in stabsel: '...' was not passed to cvrisk and thus one could
     not specify options for mclapply

  o  fixed bug in brandom: now really use contrasts.arg = "contr.dummy" per
     default.

  o  removed tests/ folder and .Rout.save files for vignettes from the CRAN
     release

  o  small improvements in manual


                CHANGES in `mboost' VERSION 2.2-1 (2013-01-14, r694)

  o  included warnings in stabsel() for better guidiance of the user:
     - A warning is issued if the upper bound for the FWER in stability
       selection is greater (by a certain margin) than the specified bound.
     - A warning is also issued if mstop is too small to select q variables.

  o  improved output of errors and warnings in stabsel.
